--- a/style.css
+++ b/style.css
@@ -1,19 +1,56 @@
 html, body {
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: "NanumGothic", sans-serif;
     font-size: 14px;
     margin: 0;
     min-height: 300px;
     padding: 0;
     width: 384px;
 }
-
-h1 {
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    margin: 0;
-    color: #272727;
+.modal-header {
+    width: 384px;
+    height: 60px;
+    margin-left: 0px;
+    margin-top: 0px;
+    background: #838383;
 }
+.modal-content {
+    width: 280px;
+    height: 53px;
+    margin-left: 17px;
+    margin-top: 19px;
+}
+.content {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 15px;
+    display: flex;
+    align-items: center;
+
+    color: #000000;
+}
+h1 {
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 384px;
+    padding: 12px;
+    color: #FFFFFF;
+
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.logo-icon {
+    width: 40px;
+    height: 40px;
+    filter: drop-shadow(1px 2px 4px rgba(0, 0, 0, 0.25));
+    padding: none;
+    margin-right: 12px;
+}
+
 a:link, a:visited {
     color: #222;
     outline: 0;
@@ -22,24 +59,16 @@ a:link, a:visited {
 img {
     width: 30px;
 }
-.modal-header {
-    align-items: center;
-    border-bottom: 0.5px, solid #dadada;
-}
-.modal-content {
-    padding: 0 22px;
+
+input {
+    border: none;
+    background-color: rgb(206, 206, 206);
+    min-width: 300px;
 }
 .modal-footer {
     border-top: 0.5px solid #dadada;
     height: 50px;
     width: 100%;
-}
-.logo {
-    padding: 16px
-}
-.logo-icon {
-    vertical-align: text-bottom;
-    margin-right: 12px;
 }
 .flex-container {
     display: flex;
